Wizard: fixed position in new layout (no dynamic recentering, moving controls around is annoying), wizard step title visible

--- a/style/components/wizard.styl
+++ b/style/components/wizard.styl
@@ -55,8 +55,7 @@
 	flex: 1
 	flex-direction: column;
 	justify-content: center;
-	margin: auto 0 auto 0
-	height: 52px
+	margin: 10px 0 25px 0;
 	text-align: left
 	display: flex
 	
@@ -84,6 +83,7 @@
 
 .wizard__text-title {
 	color: #fff;
+	margin-bottom: 12px;
 	@extend .font__size--large
 }
 
@@ -97,12 +97,11 @@
 .wizard__next-button {
 	display: inline-block
 	flex: none
-	padding: 0 space(1)
+	padding: 43px space(1)
 	height: 40px
 	line-height: 40px
 	text-transform: uppercase
 	background: black
-	margin: auto 0 auto space(2)
 	cursor: pointer
 	color: $color__white
 	text-decoration: none
